# Codyssi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/2024/: day01.py
src/2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py
